Fixed the friends panel double toggling on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,7 @@ body,
     inset #bfecf7 0 0 0 23px;
 }
 
-[onClick], a {
+[onPointerUp], a {
   cursor: pointer;
 }
 
